Add transparent favicon images and update index.html to reference new icon files

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <title>Talent Pool AI - Software Engineering Best Practices</title>
     
     <!-- Favicons and App Icons -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/icon-180.png">
-    <link rel="icon" type="image/png" sizes="48x48" href="/icon-48.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/icon-32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/icon-16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/icon-180-transparent.png">
+    <link rel="icon" type="image/png" sizes="48x48" href="/icon-48-transparent.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/icon-32-transparent.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/icon-16-transparent.png">
     
     <!-- React & ReactDOM -->
     <script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
