--- a/index.html
+++ b/index.html
@@ -656,7 +656,7 @@
                                     </div>
                                     <p className="text-slate-400 text-sm leading-relaxed">
                                         In this module, we dive deep into <strong>{module.title}</strong>. 
-                                        This session is crucial for understanding the broader context of AI-Driven Software Engineering. 
+                                        This session is crucial for understanding the broader context of AI-Native Software Engineering. 
                                         Prepare to take notes on key architectural patterns and implementation strategies.
                                     </p>
                                 </div>
@@ -1029,7 +1029,7 @@
                     <header className="pt-32 pb-12 px-6 relative z-10">
                         <div className="container mx-auto max-w-6xl text-center">
                             <h1 className="text-5xl md:text-7xl font-bold text-white tracking-tight mb-6 leading-tight drop-shadow-xl">
-                                AI-Driven <br />
+                                AI-Native <br />
                                 <span className="text-transparent bg-clip-text bg-gradient-to-r from-cyan-300 via-blue-400 to-purple-400 animate-gradient">Software Engineering</span>
                             </h1>
                             <p className="text-lg md:text-xl text-slate-400 max-w-5xl mx-auto mb-10 leading-relaxed">
