Update favicon and app icon references in index-snapshot.html to include multiple sizes for improved compatibility and clarity.

--- a/index-snapshot.html
+++ b/index-snapshot.html
@@ -5,9 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Talent Pool AI - Software Engineering Best Practices</title>
     
-    <!-- Favicons -->
-    <link rel="icon" type="image/png" href="https://drive.google.com/thumbnail?id=1lYBYnidjYIKhXinABfLz7tialoAu1bID&sz=w1000">
-    <link rel="apple-touch-icon" href="https://drive.google.com/thumbnail?id=1lYBYnidjYIKhXinABfLz7tialoAu1bID&sz=w1000">
+    <!-- Favicons and App Icons -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/icon-180-transparent.png">
+    <link rel="icon" type="image/png" sizes="48x48" href="/icon-48-transparent.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/icon-32-transparent.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/icon-16-transparent.png">
 
     <!-- React & ReactDOM -->
     <script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
