--- a/index-snapshot.html
+++ b/index-snapshot.html
@@ -974,6 +974,50 @@
             );
         };
 
+        // NEW COMPONENT: Vision Modal
+        const VisionModal = ({ onClose }) => {
+            useEffect(() => {
+                document.body.style.overflow = 'hidden';
+                return () => {
+                    document.body.style.overflow = 'unset';
+                };
+            }, []);
+
+            return ReactDOM.createPortal(
+                <div className="relative z-[9999]">
+                    <div 
+                        className="fixed inset-0 bg-black/90 backdrop-blur-md transition-opacity"
+                        onClick={onClose}
+                    ></div>
+                    <div className="fixed inset-0 overflow-y-auto">
+                        <div className="flex min-h-full items-center justify-center p-4 text-center">
+                            <div className="relative w-full max-w-[95vw] bg-slate-900 border border-cyan-500/30 rounded-2xl shadow-[0_0_100px_rgba(6,182,212,0.2)] overflow-hidden animate-fade-in-up flex flex-col">
+                                
+                                <div className="flex justify-between items-center p-6 border-b border-slate-800/50 bg-slate-900 sticky top-0 z-10">
+                                    <h3 className="text-xl font-bold text-white flex items-center gap-2">
+                                        <LucideIcon name="Eye" className="text-cyan-400" />
+                                        Our Vision
+                                    </h3>
+                                    <button onClick={onClose} className="text-slate-400 hover:text-white transition-colors p-2 hover:bg-white/5 rounded-full">
+                                        <LucideIcon name="X" size={24} />
+                                    </button>
+                                </div>
+
+                                <div className="flex-1 overflow-auto bg-slate-950 p-4 flex justify-center">
+                                    <img 
+                                        src="https://drive.google.com/thumbnail?id=1SziJCrZVPHMLzqs3DlJuxKd9Yxkt8LpS&sz=w4000" 
+                                        alt="Vision Infographic" 
+                                        className="max-w-full h-auto rounded-lg shadow-2xl"
+                                    />
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>,
+                document.body
+            );
+        };
+
         // Component: Infographic Modal (Unchanged)
         const InfographicModal = ({ onClose }) => {
             useEffect(() => {
@@ -1022,9 +1066,10 @@
             const [selectedModule, setSelectedModule] = useState(null);
             const [showPathways, setShowPathways] = useState(false);
             const [showInfographic, setShowInfographic] = useState(false);
+            const [showVision, setShowVision] = useState(false); // State for Vision Modal
             const [activeInfoModal, setActiveInfoModal] = useState(null);
             const [scrolled, setScrolled] = useState(false);
-            const [mobileMenuOpen, setMobileMenuOpen] = useState(false); // New State for Mobile Menu
+            const [mobileMenuOpen, setMobileMenuOpen] = useState(false);
 
             useEffect(() => {
                 const handleScroll = () => setScrolled(window.scrollY > 50);
@@ -1176,6 +1221,7 @@
 
                             {/* Desktop Menu - Hidden on Mobile */}
                             <div className="hidden md:flex items-center gap-4">
+                                <button onClick={() => setShowVision(true)} className="px-5 py-2 rounded-full bg-cyan-500/10 border border-cyan-500/30 text-cyan-400 text-sm font-bold hover:bg-cyan-500/20 hover:border-cyan-500/50 transition-all shadow-[0_0_15px_rgba(6,182,212,0.1)]">Vision</button>
                                 <button onClick={() => setActiveInfoModal('about')} className="px-5 py-2 rounded-full bg-cyan-500/10 border border-cyan-500/30 text-cyan-400 text-sm font-bold hover:bg-cyan-500/20 hover:border-cyan-500/50 transition-all shadow-[0_0_15px_rgba(6,182,212,0.1)]">About</button>
                                 <button onClick={() => setActiveInfoModal('services')} className="px-5 py-2 rounded-full bg-cyan-500/10 border border-cyan-500/30 text-cyan-400 text-sm font-bold hover:bg-cyan-500/20 hover:border-cyan-500/50 transition-all shadow-[0_0_15px_rgba(6,182,212,0.1)]">Services</button>
                                 <button onClick={() => setActiveInfoModal('contact')} className="px-5 py-2 rounded-full bg-cyan-500/10 border border-cyan-500/30 text-cyan-400 text-sm font-bold hover:bg-cyan-500/20 hover:border-cyan-500/50 transition-all shadow-[0_0_15px_rgba(6,182,212,0.1)]">Contact Us</button>
@@ -1190,6 +1236,16 @@
                         {/* Mobile Dropdown Menu */}
                         <div className={`md:hidden absolute top-full left-0 w-full bg-slate-900/95 backdrop-blur-xl border-b border-slate-800 shadow-2xl transition-all duration-300 ease-in-out overflow-hidden ${mobileMenuOpen ? 'max-h-96 opacity-100' : 'max-h-0 opacity-0'}`}>
                             <div className="flex flex-col p-4 space-y-2">
+                                <button 
+                                    onClick={() => { setShowVision(true); setMobileMenuOpen(false); }} 
+                                    className="flex items-center gap-4 p-4 rounded-xl hover:bg-slate-800/50 active:bg-slate-800 text-slate-200 transition-all border border-transparent hover:border-slate-700/50"
+                                >
+                                    <div className="w-10 h-10 rounded-full bg-cyan-500/10 flex items-center justify-center text-cyan-400 shrink-0">
+                                        <LucideIcon name="Eye" size={20} />
+                                    </div>
+                                    <span className="font-bold text-lg">Vision</span>
+                                </button>
+
                                 <button 
                                     onClick={() => { setActiveInfoModal('about'); setMobileMenuOpen(false); }} 
                                     className="flex items-center gap-4 p-4 rounded-xl hover:bg-slate-800/50 active:bg-slate-800 text-slate-200 transition-all border border-transparent hover:border-slate-700/50"
@@ -1365,6 +1421,7 @@
 
                     {showPathways && <LearningPathwaysModal onClose={() => setShowPathways(false)} onPlayModule={handlePlayModuleFromPathways} />}
                     {showInfographic && <InfographicModal onClose={() => setShowInfographic(false)} />}
+                    {showVision && <VisionModal onClose={() => setShowVision(false)} />}
                     {renderInfoModal()}
                 </div>
             );
