--- a/index-snapshot.html
+++ b/index-snapshot.html
@@ -991,7 +991,7 @@
                     ></div>
                     <div className="fixed inset-0 overflow-y-auto">
                         <div className="flex min-h-full items-center justify-center p-4 text-center">
-                            <div className="relative w-full max-w-[95vw] bg-slate-900 border border-cyan-500/30 rounded-2xl shadow-[0_0_100px_rgba(6,182,212,0.2)] overflow-hidden animate-fade-in-up flex flex-col">
+                            <div className="relative w-full max-w-4xl bg-slate-900 border border-cyan-500/30 rounded-2xl shadow-[0_0_100px_rgba(6,182,212,0.2)] overflow-hidden animate-fade-in-up flex flex-col">
                                 
                                 <div className="flex justify-between items-center p-6 border-b border-slate-800/50 bg-slate-900 sticky top-0 z-10">
                                     <h3 className="text-xl font-bold text-white flex items-center gap-2">
@@ -1005,7 +1005,7 @@
 
                                 <div className="flex-1 overflow-auto bg-slate-950 p-4 flex justify-center">
                                     <img 
-                                        src="https://drive.google.com/thumbnail?id=1SziJCrZVPHMLzqs3DlJuxKd9Yxkt8LpS&sz=w4000" 
+                                        src="https://drive.google.com/thumbnail?id=1SziJCrZVPHMLzqs3DlJuxKd9Yxkt8LpS&sz=w2000" 
                                         alt="Vision Infographic" 
                                         className="max-w-full h-auto rounded-lg shadow-2xl"
                                     />
