--- a/whitepaper.html
+++ b/whitepaper.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI-Native Software Engineering: The Shift</title>
+
+    <!-- Favicons and App Icons -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/icon-180-transparent.png">
+    <link rel="icon" type="image/png" sizes="48x48" href="/icon-48-transparent.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/icon-32-transparent.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/icon-16-transparent.png">
+
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
